[gd_scene load_steps=16 format=2]

[ext_resource path="res://Escenas/Juego/Juego.tscn" type="PackedScene" id=1]
[ext_resource path="res://Codigos/Multijugador/Multijugador.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Tablero/Tablero.tres" type="TileSet" id=3]
[ext_resource path="res://recursos/Tipografia/Shiny Signature/Shiny Signature.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://recursos/Adicional/Cuadrado Blanco.png" type="Texture" id=5]

[sub_resource type="Animation" id=3]
resource_name = "FallasteAzul"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("azul/Fallaste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ), Vector2( 715, 353 ), Vector2( 1015, 353 ), Vector2( 2651, 353 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FallasteRojo"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("rojo/Fallaste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, -621 ), Vector2( 722, -621 ), Vector2( 1100, -621 ), Vector2( 2639, -621 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "GanasteAzul"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("azul/Ganaste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5, 3, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -918, 353 ), Vector2( 688, 353 ), Vector2( 955, 353 ), Vector2( 2660, 353 ), Vector2( 1092, 353 ), Vector2( 845, 353 ), Vector2( -908, 353 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "GanasteRojo"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rojo/Ganaste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5, 3, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -969, -621 ), Vector2( 660, -621 ), Vector2( 962.4, -621 ), Vector2( 2632, -621 ), Vector2( 1105, -621 ), Vector2( 832, -621 ), Vector2( -917, -621 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "LeDisteAzul"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("azul/Le_diste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ), Vector2( 743, 353 ), Vector2( 1105, 353 ), Vector2( 2660, 353 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "LeDisteRojo"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("rojo/Le_diste:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, -621 ), Vector2( 715, -621 ), Vector2( 1128, -621 ), Vector2( 2721, -621 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("rojo/Tu_turno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, -580 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rojo/Fallaste:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, -580 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rojo/Le_diste:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, -580 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("azul/Tu_turno:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("azul/Fallaste:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("azul/Le_diste:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rojo/Ganaste:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -969, -580 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("azul/Ganaste:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -918, 353 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "TurnoAzul"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("azul/Tu_turno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, 353 ), Vector2( 662, 353 ), Vector2( 1033, 353 ), Vector2( 2660, 353 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "TurnoRojo"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("rojo/Tu_turno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -917, -621 ), Vector2( 634, -621 ), Vector2( 1051, -621 ), Vector2( 2647, -621 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 4 )

[node name="Multijugador" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimacionesMensajes" type="AnimationPlayer" parent="."]
anims/FallasteAzul = SubResource( 3 )
anims/FallasteRojo = SubResource( 4 )
anims/GanasteAzul = SubResource( 10 )
anims/GanasteRojo = SubResource( 9 )
anims/LeDisteAzul = SubResource( 5 )
anims/LeDisteRojo = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/TurnoAzul = SubResource( 8 )
anims/TurnoRojo = SubResource( 2 )

[node name="oceano" type="TileMap" parent="."]
position = Vector2( 24, 20 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -589826, 8, 0, -589825, 8, 0, -655360, 8, 0, -655359, 8, 0, -655358, 8, 0, -655357, 8, 0, -655356, 8, 0, -655355, 8, 0, -655354, 8, 0, -655353, 8, 0, -655352, 8, 0, -655351, 8, 0, -655350, 8, 0, -524290, 8, 0, -524289, 8, 0, -589824, 8, 0, -589823, 8, 0, -589822, 8, 0, -589821, 8, 0, -589820, 8, 0, -589819, 8, 0, -589818, 8, 0, -589817, 8, 0, -589816, 8, 0, -589815, 8, 0, -589814, 8, 0, -458754, 8, 0, -458753, 8, 0, -524288, 8, 0, -524287, 8, 0, -524286, 8, 0, -524285, 8, 0, -524284, 8, 0, -524283, 8, 0, -524282, 8, 0, -524281, 8, 0, -524280, 8, 0, -524279, 8, 0, -524278, 8, 0, -393218, 8, 0, -393217, 8, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 8, 0, -458744, 8, 0, -458743, 8, 0, -458742, 8, 0, -327682, 8, 0, -327681, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 8, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -262146, 8, 0, -262145, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -196610, 8, 0, -196609, 8, 0, -262144, 8, 0, -262143, 8, 0, -262142, 8, 0, -262141, 8, 0, -262140, 8, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -65538, 8, 0, -65537, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -2, 8, 0, -1, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, -65532, 8, 0, -65531, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, 65534, 8, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 196606, 8, 0, 196607, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 262142, 8, 0, 262143, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 327678, 8, 0, 327679, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 393214, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 458750, 8, 0, 458751, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0 )

[node name="arena" type="TileMap" parent="."]
position = Vector2( 30, -25 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 1, 9, 0, 2, 9, 1, 3, 9, 1, 4, 9, 1, 5, 9, 1, 6, 9, 1, 7, 9, 2, 65537, 9, 65536, 65538, 9, 65537, 65539, 9, 65537, 65540, 9, 65537, 65541, 9, 65537, 65542, 9, 65537, 65543, 9, 65538, 131073, 9, 65536, 131074, 9, 65537, 131075, 9, 65537, 131076, 9, 65537, 131077, 9, 65537, 131078, 9, 65537, 131079, 9, 65538, 196609, 9, 65536, 196610, 9, 65537, 196611, 9, 65537, 196612, 9, 65537, 196613, 9, 65537, 196614, 9, 65537, 196615, 9, 65538, 262145, 9, 65536, 262146, 9, 65537, 262147, 9, 65537, 262148, 9, 65537, 262149, 9, 65537, 262150, 9, 65537, 262151, 9, 65538, 327681, 9, 131072, 327682, 9, 131073, 327683, 9, 131073, 327684, 9, 131073, 327685, 9, 131073, 327686, 9, 131073, 327687, 9, 131074 )

[node name="arena2" type="TileMap" parent="."]
position = Vector2( 24, 20 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -524287, 9, 0, -524286, 9, 1, -524285, 9, 1, -524284, 9, 1, -524283, 9, 1, -524282, 9, 1, -524281, 9, 2, -458751, 9, 65536, -458750, 9, 65537, -458749, 9, 65537, -458748, 9, 65537, -458747, 9, 65537, -458746, 9, 65537, -458745, 9, 65538, -393215, 9, 65536, -393214, 9, 65537, -393213, 9, 65537, -393212, 9, 65537, -393211, 9, 65537, -393210, 9, 65537, -393209, 9, 65538, -327679, 9, 65536, -327678, 9, 65537, -327677, 9, 65537, -327676, 9, 65537, -327675, 9, 65537, -327674, 9, 65537, -327673, 9, 65538, -262143, 9, 65536, -262142, 9, 65537, -262141, 9, 65537, -262140, 9, 65537, -262139, 9, 65537, -262138, 9, 65537, -262137, 9, 65538, -196607, 9, 131072, -196606, 9, 131073, -196605, 9, 131073, -196604, 9, 131073, -196603, 9, 131073, -196602, 9, 131073, -196601, 9, 131074 )

[node name="Jugador2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -977 )

[node name="Label" parent="Jugador2" index="0"]
custom_colors/font_color = Color( 0, 0.529412, 1, 1 )
text = "Jugador 2"

[node name="Jugador1" parent="." instance=ExtResource( 1 )]

[node name="Label" parent="Jugador1" index="0"]
text = "Jugador 1"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Espera" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="rojo" type="Node2D" parent="."]

[node name="Tu_turno" type="Node2D" parent="rojo"]
position = Vector2( -917, -580 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="rojo/Tu_turno"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="rojo/Tu_turno"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tu Turno 
Jugador 1"
align = 1
valign = 1
uppercase = true

[node name="Ganaste" type="Node2D" parent="rojo"]
position = Vector2( -969, -580 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="rojo/Ganaste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="rojo/Ganaste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ganaste
Jugador 1"
align = 1
valign = 1
uppercase = true

[node name="Fallaste" type="Node2D" parent="rojo"]
position = Vector2( -917, -580 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="rojo/Fallaste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="rojo/Fallaste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fallaste!!"
align = 1
valign = 1
uppercase = true

[node name="Le_diste" type="Node2D" parent="rojo"]
position = Vector2( -917, -580 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="rojo/Le_diste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="rojo/Le_diste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "le diste!!"
align = 1
valign = 1
uppercase = true

[node name="azul" type="Node2D" parent="."]

[node name="Tu_turno" type="Node2D" parent="azul"]
position = Vector2( -917, 353 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="azul/Tu_turno"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="azul/Tu_turno"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0.415686, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tu Turno 
Jugador 2"
align = 1
valign = 1
uppercase = true

[node name="Ganaste" type="Node2D" parent="azul"]
position = Vector2( -918, 353 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="azul/Ganaste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="azul/Ganaste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0.415686, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "ganaste
Jugador 2"
align = 1
valign = 1
uppercase = true

[node name="Fallaste" type="Node2D" parent="azul"]
position = Vector2( -917, 353 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="azul/Fallaste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="azul/Fallaste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0.415686, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fallaste!!"
align = 1
valign = 1
uppercase = true

[node name="Le_diste" type="Node2D" parent="azul"]
position = Vector2( -917, 353 )
scale = Vector2( 0.629246, 0.629246 )

[node name="Fondo" type="Sprite" parent="azul/Le_diste"]
position = Vector2( -438, -5 )
scale = Vector2( 5.34986, 1 )
texture = ExtResource( 5 )

[node name="Texto" type="Label" parent="azul/Le_diste"]
margin_left = -1000.0
margin_top = -216.0
margin_right = 86.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0.415686, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "le diste!!"
align = 1
valign = 1
uppercase = true

[connection signal="timeout" from="Espera" to="." method="_on_Espera_timeout"]

[editable path="Jugador2"]
[editable path="Jugador2/Aleatorio"]
[editable path="Jugador1"]
[editable path="Jugador1/Aleatorio"]
